# Audio-Signal-Filtering

./: .gitignore  CMakeLists.txt  Documentation.docx  README.md  sine_table.txt
data/: generate_sine.py  sample-data.txt  signal.txt  sine_table.txt  sine_test.txt
include/: BandPassFilter.h  Filter.h  FilterType.h  HighPassFilter.h  LowPassFilter.h  Options.h  Signal.hpp  SineLookup.h  WavWriter.h  options.h
src/: BandPassFilter.cpp  Filter.cpp  HighPassFilter.cpp  LowPassFilter.cpp  Options.cpp  Signal.cpp  SineLookup.cpp  WavWriter.cpp  main.cpp  tests.cpp
